made chai depend on system eigen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ EXPORT (TARGETS sai2-graphics FILE ${PROJECT_BINARY_DIR}/SAI2-GRAPHICSTargets.cm
 EXPORT (PACKAGE SAI2-GRAPHICS)
 
 # configure package
-SET (CONF_INCLUDE_DIRS ${SAI2-GRAPHICS_INCLUDE_DIRS} ${CHAI3D_INCLUDE_DIRS})
+SET (CONF_INCLUDE_DIRS ${SAI2-GRAPHICS_INCLUDE_DIRS})
 SET (CONF_LIBRARIES ${SAI2-GRAPHICS_LIBRARIES})
 
 # create package configuration and version files
