--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ ADD_LIBRARY (sai2-graphics STATIC
 
 SET (SAI2-GRAPHICS_LIBRARIES sai2-graphics 
 	${SAI2-URDF_LIBRARIES}
+	${CHAI3D_LIBRARIES}
 	)
 
 # 
