added ui force widget as part of sai2-graphics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,10 @@ find_package(SAI2-URDF REQUIRED)
 SET(PARSER_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/parser)
 SET(PARSER_SOURCE ${PROJECT_SOURCE_DIR}/src/parser/UrdfToSai2Graphics.cpp)
 
+# include Widgets
+SET(WIDGETS_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/widgets)
+SET(WIDGETS_SOURCE ${PROJECT_SOURCE_DIR}/src/widgets/UIForceWidget.cpp)
+
 # include Graphics
 SET(SAI2-GRAPHICS_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/src)
 SET(GRAPHICS_SOURCE ${PROJECT_SOURCE_DIR}/src/Sai2Graphics.cpp
@@ -56,12 +60,14 @@ INCLUDE_DIRECTORIES (
 	${SAI2-URDF_INCLUDE_DIRS}
 	${CHAI3D_INCLUDE_DIRS}
 	${PARSER_INCLUDE_DIR}
+	${WIDGETS_INCLUDE_DIR}
 	)
 
 # Create the library
 ADD_LIBRARY (sai2-graphics STATIC
 	${GRAPHICS_SOURCE}
 	${PARSER_SOURCE}
+	${WIDGETS_SOURCE}
 	)
 
 SET (SAI2-GRAPHICS_LIBRARIES sai2-graphics 
