--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 
 ADD_SUBDIRECTORY(01-parse_world_and_robot)
 ADD_SUBDIRECTORY(02-update_rendering)
+ADD_SUBDIRECTORY(03-apply_ui_force)
 ADD_SUBDIRECTORY(04-change_worlds_at_runtime)
