--- a/.github/actions/build-repo/action.yml
+++ b/.github/actions/build-repo/action.yml
@@ -12,6 +12,7 @@ runs:
       shell: bash
       run: |
         mkdir ../dep
+        sudo apt-get update
         sudo apt-get install libeigen3-dev libtinyxml2-dev
         sudo apt-get install libasound2-dev libusb-1.0.0-dev freeglut3-dev xorg-dev libglew-dev
         sudo apt-get install libglfw3-dev
