--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ ADD_LIBRARY (sai2-graphics STATIC
 SET (SAI2-GRAPHICS_LIBRARIES sai2-graphics 
 	${SAI2-URDF_LIBRARIES}
 	${CHAI3D_LIBRARIES}
+	${SAI2-MODEL_LIBRARIES}
 	${GLFW_LIBRARY}
 	)
 
