--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ ADD_SUBDIRECTORY(02-update_rendering)
 ADD_SUBDIRECTORY(03-apply_ui_force)
 ADD_SUBDIRECTORY(04-change_worlds_at_runtime)
 ADD_SUBDIRECTORY(05-multiple_cameras)
+ADD_SUBDIRECTORY(06-force_sensor_display)
