--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,10 @@
+SET (SAI2-GRAPHICS_EXAMPLES_LIBRARIES 
+	${SAI2-GRAPHICS_LIBRARIES}
+	${SAI2-MODEL_LIBRARIES}
+    ${SAI2-URDF_LIBRARIES}
+    ${CHAI3D_LIBRARIES}
+	)
+
 ADD_SUBDIRECTORY(01-parse_world_and_robot)
 ADD_SUBDIRECTORY(02-update_rendering)
 ADD_SUBDIRECTORY(03-multiple_cameras)
