--- a/examples/05-apply_ui_force/CMakeLists.txt
+++ b/examples/05-apply_ui_force/CMakeLists.txt
@@ -5,7 +5,7 @@ ADD_EXECUTABLE (${EXAMPLE_NAME} main.cpp)
 
 # and link the library against the executable
 TARGET_LINK_LIBRARIES (${EXAMPLE_NAME}
-	${SAI2-GRAPHICS_LIBRARIES}
+	${SAI2-GRAPHICS_EXAMPLES_LIBRARIES}
 )
 
 # export resources such as model files.
