fixed include in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ SET(GRAPHICS_SOURCE
 
 # Add the include directory to the include paths
 INCLUDE_DIRECTORIES (
+	${EIGEN3_INCLUDE_DIRS}
 	${SAI2-GRAPHICS_INCLUDE_DIRS}
 	${SAI2-MODEL_INCLUDE_DIRS}
 	${SAI2-URDF_INCLUDE_DIRS}
