--- a/.github/actions/build-repo/action.yml
+++ b/.github/actions/build-repo/action.yml
@@ -15,7 +15,7 @@ runs:
         sudo apt-get update
         sudo apt-get install libeigen3-dev libtinyxml2-dev libgtest-dev
         sudo apt-get install libasound2-dev libusb-1.0.0-dev freeglut3-dev xorg-dev libglew-dev
-        sudo apt-get install libglfw3-dev
+        sudo apt-get install libglfw3-dev libopenal-dev
 
     - name: Setup Sai2-urdfreader
       shell: bash
