--- a/.github/actions/build-repo/action.yml
+++ b/.github/actions/build-repo/action.yml
@@ -9,21 +9,21 @@ runs:
   using: "composite"
   steps:
     - name: Install dependencies
-      uses: manips-sai-org/sai2-common/custom_github_actions/dependencies@mika_dev/custom_github_action
+      uses: manips-sai-org/sai2-common/custom_github_actions/dependencies@master
 
     - name: Setup Sai2-urdfreader
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@mika_dev/custom_github_action
+      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@master
       with:
         token: ${{ inputs.token }}
         repo-name: sai2-urdfreader
         
     - name: Setup Sai2-model
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-model@mika_dev/custom_github_action
+      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-model@master
       with:
         token: ${{ inputs.token }}
 
     - name: Setup chai3d
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@mika_dev/custom_github_action
+      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@master
       with:
         token: ${{ inputs.token }}
         repo-name: chai3d
