fixed parsing and examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,13 +1,13 @@
-SET (SAI2-GRAPHICS_EXAMPLES_LIBRARIES 
-	${SAI2-GRAPHICS_LIBRARIES}
-	${SAI2-MODEL_LIBRARIES}
-    ${SAI2-URDF_LIBRARIES}
-    ${CHAI3D_LIBRARIES}
-	)
+set(SAI2-GRAPHICS_EXAMPLES_LIBRARIES
+    ${SAI2-GRAPHICS_LIBRARIES} ${SAI2-MODEL_LIBRARIES} ${SAI2-URDF_LIBRARIES}
+    ${CHAI3D_LIBRARIES})
 
-ADD_SUBDIRECTORY(01-parse_world_and_robot)
-ADD_SUBDIRECTORY(02-update_rendering)
-ADD_SUBDIRECTORY(03-multiple_cameras)
-ADD_SUBDIRECTORY(04-change_worlds_at_runtime)
-ADD_SUBDIRECTORY(05-apply_ui_force)
-ADD_SUBDIRECTORY(06-force_sensor_display)
+set(EXAMPLES_FOLDER ${CMAKE_CURRENT_SOURCE_DIR})
+add_definitions(-DEXAMPLES_FOLDER="${EXAMPLES_FOLDER}")
+
+add_subdirectory(01-parse_world_and_robot)
+add_subdirectory(02-update_rendering)
+add_subdirectory(03-multiple_cameras)
+add_subdirectory(04-change_worlds_at_runtime)
+add_subdirectory(05-apply_ui_force)
+add_subdirectory(06-force_sensor_display)
