--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,3 +12,4 @@ ADD_SUBDIRECTORY(04-change_worlds_at_runtime)
 ADD_SUBDIRECTORY(05-apply_ui_force)
 ADD_SUBDIRECTORY(06-force_sensor_display)
 ADD_SUBDIRECTORY(07-get_rgb_data)
+ADD_SUBDIRECTORY(08-get_rgb_data_multiworld)
