--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(05-apply_ui_force)
 add_subdirectory(06-force_sensor_display)
 ADD_SUBDIRECTORY(07-get_rgb_data)
 ADD_SUBDIRECTORY(08-get_rgb_data_multiworld)
+ADD_SUBDIRECTORY(09-set_get_rgb_data)
