cameras attached to robots or objects

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(03-multiple_cameras)
 add_subdirectory(04-change_worlds_at_runtime)
 add_subdirectory(05-apply_ui_force)
 add_subdirectory(06-force_sensor_display)
+add_subdirectory(07-cameras_attached_to_models)
