--- a/examples/99-robot_graphics/CMakeLists.txt
+++ b/examples/99-robot_graphics/CMakeLists.txt
@@ -11,4 +11,4 @@ TARGET_LINK_LIBRARIES (${EXAMPLE_NAME}
 # export resources such as model files.
 SET(RESOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/resources)
 FILE(MAKE_DIRECTORY ${RESOURCE_DIR})
-FILE(COPY world.urdf world.urdf panda_arm.urdf DESTINATION ${RESOURCE_DIR})
+FILE(COPY world.urdf world.urdf HRP4c.urdf panda_arm.urdf DESTINATION ${RESOURCE_DIR})
