--- a/.github/actions/build-repo/action.yml
+++ b/.github/actions/build-repo/action.yml
@@ -9,26 +9,26 @@ runs:
   using: "composite"
   steps:
     - name: Install dependencies
-      uses: manips-sai-org/sai2-common/custom_github_actions/dependencies@master
+      uses: manips-sai-org/sai-common/custom_github_actions/dependencies@master
 
-    - name: Setup Sai2-urdfreader
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@master
+    - name: Setup Sai-urdfreader
+      uses: manips-sai-org/sai-common/custom_github_actions/sai-repositories@master
       with:
         token: ${{ inputs.token }}
-        repo-name: sai2-urdfreader
+        repo-name: sai-urdfreader
         
-    - name: Setup Sai2-model
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-model@master
+    - name: Setup Sai-model
+      uses: manips-sai-org/sai-common/custom_github_actions/sai-model@master
       with:
         token: ${{ inputs.token }}
 
     - name: Setup chai3d
-      uses: manips-sai-org/sai2-common/custom_github_actions/sai2-repositories@master
+      uses: manips-sai-org/sai-common/custom_github_actions/sai-repositories@master
       with:
         token: ${{ inputs.token }}
         repo-name: chai3d
 
-    - name: Build Sai2-Graphics
+    - name: Build Sai-Graphics
       shell: bash
       run: |
         export CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}:dep/*
