--- a/.github/workflows/upload_artifact.yml
+++ b/.github/workflows/upload_artifact.yml
@@ -17,10 +17,10 @@ jobs:
       - name: build-repo
         uses: ./.github/actions/build-repo
         with: 
-          token: ${{ secrets.SAI2_TOKEN }}
+          token: ${{ secrets.SAI_TOKEN }}
 
-      - name: Archive Sai2-graphics Artifact
+      - name: Archive Sai-graphics Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: sai2-graphics-artifact
-          path: build/libsai2-graphics.a
+          name: sai-graphics-artifact
+          path: build/libsai-graphics.a
