--- a/SAI2-GRAPHICSConfig.cmake.in
+++ b/SAI2-GRAPHICSConfig.cmake.in
@@ -1,12 +1,12 @@
 # compute paths
-get_filename_component(SAI2-GRAPHICS_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-set(SAI2-GRAPHICS_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
-set(SAI2-GRAPHICS_DEFINITIONS "@CONF_DEFINITIONS@")
+get_filename_component(SAI-GRAPHICS_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+set(SAI-GRAPHICS_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
+set(SAI-GRAPHICS_DEFINITIONS "@CONF_DEFINITIONS@")
  
 # library dependencies (contains definitions for IMPORTED targets)
-if(NOT TARGET sai2-graphics AND NOT SAI2-GRAPHICS_BINARY_DIR)
-  include("${SAI2-GRAPHICS_CMAKE_DIR}/SAI2-GRAPHICSTargets.cmake")
+if(NOT TARGET sai-graphics AND NOT SAI-GRAPHICS_BINARY_DIR)
+  include("${SAI-GRAPHICS_CMAKE_DIR}/SAI-GRAPHICSTargets.cmake")
 endif()
 
-# IMPORTED target created by SAI2-GRAPHICSTargets.cmake
-set(SAI2-GRAPHICS_LIBRARIES "@CONF_LIBRARIES@")
+# IMPORTED target created by SAI-GRAPHICSTargets.cmake
+set(SAI-GRAPHICS_LIBRARIES "@CONF_LIBRARIES@")
