--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(SAI2-GRAPHICS_EXAMPLES_LIBRARIES
-    ${SAI2-GRAPHICS_LIBRARIES} ${SAI2-MODEL_LIBRARIES} ${SAI2-URDF_LIBRARIES}
+set(SAI-GRAPHICS_EXAMPLES_LIBRARIES
+    ${SAI-GRAPHICS_LIBRARIES} ${SAI-MODEL_LIBRARIES} ${SAI-URDF_LIBRARIES}
     ${CHAI3D_LIBRARIES})
 
 set(EXAMPLES_FOLDER ${CMAKE_CURRENT_SOURCE_DIR})
